<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:id="@+id/cancle"
            android:padding="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sort By"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_country"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/color_black"
        android:gravity="center"

        android:id="@+id/tv_country"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_total_cases"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/color_black"
        android:gravity="center"
        android:id="@+id/tv_total_case"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_deaths"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/color_black"
        android:gravity="center"
        android:id="@+id/tv_death"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_recovered"
        android:textSize="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textColor="@color/color_black"
        android:gravity="center"
        android:id="@+id/tv_recovered"/>

    <CheckBox
        android:id="@+id/asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="By ASC" />

    <CheckBox
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="By DESC" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:text="Save"
        android:textSize="@dimen/_12sdp"
        android:background="@color/color_sky_blue"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textColor="@color/color_white"/>

</LinearLayout>