<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rl_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:translationZ="3dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_total_case"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/total_casees"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_death"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/total_death"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_recoverd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/total_recoverd"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginVertical="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_report">

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textColor="@color/color_black"
            android:text="Country"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="Total cases"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_death"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="Deaths"
            android:textStyle="bold"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tv_recoverd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="Recovered"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:alpha="1"
            android:gravity="center"
            android:text="@string/no_internet_nplease_connect_to_internet"
            android:textColor="@color/color_black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_report" />

</androidx.constraintlayout.widget.ConstraintLayout>